# dummy-pkg

./: README.md  pyproject.toml  pytest.toml  tox.toml
dummy_pkg/: __init__.py
tests/: test_add.py  test_add.py~
